package edu.uees.tutorias.domain;

public enum EstadoReserva {
	PENDIENTE,
	CONFIRMADA,
	CANCELADA,
	REALIZADA
}
