package edu.uees.tutorias.repository;

import edu.uees.tutorias.domain.Reserva;

public interface IReservaRepository {
	void guardar(Reserva reserva);
}
